--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,7 @@
     width: 100%;
     background-color: rgba(0,0,0,0.12);
     padding: 20px 50px;
-    position: sticky;
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -12,9 +12,6 @@
     transition: .3s linear;
 }
 
-.sticky {
-
-}
 
 /* header logo img*/
 
@@ -373,7 +370,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 119%;
+    height: 118%;
     background-image: linear-gradient(0,rgba(0, 0, 0, 0.25),transparent );
 }
 
